buttons look good now need to fix alignment

--- a/src/components/myNav.css
+++ b/src/components/myNav.css
@@ -59,8 +59,9 @@ body{
     left: 0;
   }
 
-  .nav-link{
+  .nav-link {
     text-align: right;
+    font-size: 3vh;
   }
 
   .navItem {
