--- a/src/pages/Donation.css
+++ b/src/pages/Donation.css
@@ -1,7 +1,5 @@
-.donationAmount {
+/* .donationAmount {
     display: block;
-    width: 100%;
-    padding: 0.375rem 0.75rem;
     font-size: 3vh;
     line-height: 1.5;
     color: hsla(0,0%,100%,.55);
@@ -10,11 +8,12 @@
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    /* height: 8vh; */
-}
+    height: 8vh;
+    /* background-color: red;
+} */
 
 .paymentSection2{
-    /* display: flex; */
+    display: flex;
     float: right;
     margin-bottom: 700px;
     align-items: center;
@@ -25,25 +24,56 @@
     margin: 20px;
     width: 200px;
     height: 200px;
-    /* display: fixed;
-    left: 0; */
+    display: fixed;
     position: absolute;
-    right: 0;
-    float: right;
 }
 
 .donationSection{
     text-align: center;
     align-items: center;
+    width: clamp(50vw, calc(15vh + 45vw), 100vw);
 }
 .formSection2{
     text-align: center;
     align-items: center;
+    height: 80vh;
 }
 .registrationSectionHeader2{
+    font-size: calc(3.5vh + 1.75vw);
     text-align: center;
+    align-self: center;
+    
 }
 
 .amount{
     font-size: 40px;
+}
+
+.donationValue {
+
+    border-radius: 20px;
+    margin: 1vh;
+    padding: 2vh;
+    width: calc(10vh + 10vw);
+    height: clamp(5vh, 15vh, 30vh);
+    font-size: clamp(0.5vh, 5vh, 8vh);
+    background: linear-gradient(#1e1e1e, #282828) padding-box,
+                linear-gradient(to right, var(--primary), #5dbcff) border-box;
+    border-radius: 3vh;
+    border: 4px solid transparent;
+    transition: 0.25s ease all;
+
+}
+
+.donationValue:hover {
+    border: 4px solid var(--primary);
+    cursor: pointer;
+    transform: scale(1.05);
+
+}
+
+.payment {
+
+    background-color: red;
+
 }
