--- a/src/pages/Registration.css
+++ b/src/pages/Registration.css
@@ -134,7 +134,7 @@ button {
     color: var(--gradient);
     font-family: var(--barlow);
     text-align: center;
-    font-size: calc(3vh + 1.75vw);
+    font-size: calc(3.5vh + 1.75vw);
     margin-bottom: 1vh;
 }
 
